--- a/css/style.css
+++ b/css/style.css
@@ -1734,7 +1734,7 @@ figure.effect-apollo:hover p {
 /*-- //about --*/
 /*-- offers --*/
 .offers {
-   background: url(../images/22.jpg)no-repeat;
+   background: url(../images/22a.jpg)no-repeat;
     background-size: cover;
     background-attachment: fixed;
     padding: 5em 0;
